chore：单元测试过程 sout输出的信息 重定向到测试报告（${projectDir}hutool\hutool-core\target\surefire-reports\cn.hutool.core.text.dfa.AutomatonTest-output.txt）

--- a/hutool-core/pom.xml
+++ b/hutool-core/pom.xml
@@ -16,4 +16,16 @@
 	<name>${project.artifactId}</name>
 	<description>Hutool核心，包括集合、字符串、Bean等工具</description>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
