--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -480,5 +480,11 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.yaml</groupId>
+		    <artifactId>snakeyaml</artifactId>
+		    <version>2.0</version>
+		</dependency>
 	</dependencies>
 </project>
