--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.16.M1</version>
+		<version>5.8.16</version>
 	</parent>
 
 	<artifactId>hutool-extra</artifactId>
