--- a/hutool-socket/pom.xml
+++ b/hutool-socket/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.16</version>
+		<version>5.8.17.M1</version>
 	</parent>
 
 	<artifactId>hutool-socket</artifactId>
