--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,15 @@
 					</tags>
 				</configuration>
 			</plugin>
+			<!-- 统一更新pom版本 -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.15.0</version>
+				<configuration>
+					<generateBackupPoms>false</generateBackupPoms>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -186,13 +195,6 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>versions-maven-plugin</artifactId>
-						<configuration>
-							<generateBackupPoms>false</generateBackupPoms>
-						</configuration>
 					</plugin>
 					<!-- 测试覆盖度 -->
 					<plugin>
