--- a/hutool-bom/pom.xml
+++ b/hutool-bom/pom.xml
@@ -27,7 +27,7 @@
 	<artifactId>hutool-bom</artifactId>
 	<name>${project.artifactId}</name>
 	<description>提供丰富的Java工具方法，此模块为Hutool所有模块汇总，最终形式为拆分开的多个jar包，可以通过exclude方式排除不需要的模块</description>
-	<url>https://github.com/looly/hutool</url>
+	<url>https://github.com/dromara/hutool</url>
 
 	<dependencyManagement>
 		<dependencies>
