--- a/hutool-bom/pom.xml
+++ b/hutool-bom/pom.xml
@@ -32,62 +32,62 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-core</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-crypto</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-db</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-extra</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-http</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-log</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-setting</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-cron</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-json</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-poi</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-socket</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cn.hutool</groupId>
+				<groupId>${project.parent.groupId}</groupId>
 				<artifactId>hutool-swing</artifactId>
 				<version>${project.parent.version}</version>
 			</dependency>
@@ -96,51 +96,51 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-crypto</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-db</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-extra</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-http</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-log</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-setting</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-cron</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-json</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-poi</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-socket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>cn.hutool</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>hutool-swing</artifactId>
 		</dependency>
 	</dependencies>
