--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,34 @@
 			<name>Looly</name>
 			<email>loolly@gmail.com</email>
 		</developer>
+		<developer>
+			<name>VampireAchao</name>
+			<email>VampireAchao@dromara.org</email>
+		</developer>
+		<developer>
+			<name>Emptypoint</name>
+			<email>1215582715@qq.com</email>
+		</developer>
+		<developer>
+			<name>Createsequence</name>
+			<email>cn.createsequence@gmail.com</email>
+		</developer>
+		<developer>
+			<name>TianPeiRong</name>
+			<email>canghaihongxin@163.com</email>
+		</developer>
+		<developer>
+			<name>Dazer007</name>
+			<email>dazer007@163.com</email>
+		</developer>
+		<developer>
+			<name>CherryRum</name>
+			<email>yulin.1996@foxmail.com</email>
+		</developer>
+		<developer>
+			<name>Aihuahua</name>
+			<email>aihuahua522@qq.com</email>
+		</developer>
 	</developers>
 
 	<scm>
