hutool-extra模板引擎增加pebble引擎支持。Pebble是一款受Twig启发的Java模板引擎。它具有模板继承和易于阅读的语法，内置有安全的autoescaping，并包括对国际化的综合支持。

--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -151,6 +151,12 @@
 			<version>2.1.10</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>io.pebbletemplates</groupId>
+			<artifactId>pebble</artifactId>
+			<version>3.2.0</version>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- 邮件 -->
 		<dependency>
