--- a/hutool-http/pom.xml
+++ b/hutool-http/pom.xml
@@ -50,6 +50,21 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<!-- 版本固定5.0.0，可以支持jdk8 -->
+			<version>5.0.0</version>
+			<optional>true</optional>
+		</dependency>
+
 		<!-- 第三方HTTP客户端库 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
