修复junit被关联引入的bug, JschUtil新增一个重载方法以支持私钥以byte数组形式载入

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
