--- a/hutool-dfa/pom.xml
+++ b/hutool-dfa/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.18</version>
+		<version>5.8.19.M1</version>
 	</parent>
 
 	<artifactId>hutool-dfa</artifactId>
