--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -179,7 +179,7 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.mail</groupId>
+			<groupId>org.eclipse.angus</groupId>
 			<artifactId>jakarta.mail</artifactId>
 			<version>2.0.1</version>
 			<scope>test</scope>
