--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 	<artifactId>hutool-parent</artifactId>
 	<version>6.0.0.M3</version>
 	<name>hutool</name>
-	<description>Hutool是一个小而全的Java工具类库，通过静态方法封装，降低相关API的学习成本，提高工作效率，使Java拥有函数式语言般的优雅，让Java语言也可以“甜甜的”。</description>
+	<description>
+		Hutool是一个小而全的Java工具类库，通过静态方法封装，降低相关API的学习成本，提高工作效率，使Java拥有函数式语言般的优雅，让Java语言也可以“甜甜的”。
+	</description>
 	<url>https://github.com/dromara/hutool</url>
 
 	<modules>
@@ -68,18 +70,18 @@
 			<version>${lombok.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Kotlin适配 -->
+		<!-- Kotlin适配，用于在测试和编译中使用kotlin代码 -->
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
 			<version>${kotlin-version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-reflect</artifactId>
 			<version>${kotlin-version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -138,6 +140,38 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>${kotlin-version}</version>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<id>compile</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<sourceDirs>
+								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+								<sourceDir>${project.basedir}/src/main/java</sourceDir>
+							</sourceDirs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>test-compile</id>
+						<goals>
+							<goal>test-compile</goal>
+						</goals>
+						<configuration>
+							<sourceDirs>
+								<sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+								<sourceDir>${project.basedir}/src/test/java</sourceDir>
+							</sourceDirs>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -204,13 +238,27 @@
 							<placement>a</placement>
 							<head>Implementation Note:</head>
 						</tag>
-						<tag><name>param</name></tag>
-						<tag><name>return</name></tag>
-						<tag><name>throws</name></tag>
-						<tag><name>since</name></tag>
-						<tag><name>version</name></tag>
-						<tag><name>serialData</name></tag>
-						<tag><name>see</name></tag>
+						<tag>
+							<name>param</name>
+						</tag>
+						<tag>
+							<name>return</name>
+						</tag>
+						<tag>
+							<name>throws</name>
+						</tag>
+						<tag>
+							<name>since</name>
+						</tag>
+						<tag>
+							<name>version</name>
+						</tag>
+						<tag>
+							<name>serialData</name>
+						</tag>
+						<tag>
+							<name>see</name>
+						</tag>
 					</tags>
 				</configuration>
 			</plugin>
