--- a/hutool-all/pom.xml
+++ b/hutool-all/pom.xml
@@ -117,6 +117,7 @@
 									<artifact>*:*</artifact>
 									<excludes>
 										<exclude>META-INF/maven/**</exclude>
+										<exclude>META-INF/*.MF</exclude>
 									</excludes>
 								</filter>
 							</filters>
