--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<version>6.0.0.M4</version>
 	<name>hutool</name>
 	<description>
-		Hutool是一个小而全的Java工具类库，通过静态方法封装，降低相关API的学习成本，提高工作效率，使Java拥有函数式语言般的优雅，让Java语言也可以“甜甜的”。
+		Hutool是一个功能丰富且易用的Java工具库，通过诸多实用工具类的使用，旨在帮助开发者快速、便捷地完成各类开发任务。这些封装的工具涵盖了字符串、数字、集合、编码、日期、文件、IO、加密、数据库JDBC、JSON、HTTP客户端等一系列操作，可以满足各种不同的开发需求。
 	</description>
 	<url>https://github.com/dromara/hutool</url>
 
