--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -130,9 +130,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.32</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
