--- a/hutool-setting/pom.xml
+++ b/hutool-setting/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.20.M1</version>
+		<version>5.8.20</version>
 	</parent>
 
 	<artifactId>hutool-setting</artifactId>
