--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -27,7 +27,7 @@
 		<!-- 此处固定4.x，支持到JDK8 -->
 		<hikariCP.version>4.0.3</hikariCP.version>
 		<mongo4.version>4.9.1</mongo4.version>
-		<sqlite.version>3.41.2.1</sqlite.version>
+		<sqlite.version>3.42.0.0</sqlite.version>
 		<!-- 此处固定2.5.x，支持到JDK8 -->
 		<hsqldb.version>2.5.2</hsqldb.version>
 		<jedis.version>4.3.1</jedis.version>
@@ -171,20 +171,14 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>2.1.214</version>
+			<version>2.2.220</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>ru.yandex.clickhouse</groupId>
+			<groupId>com.clickhouse</groupId>
 			<artifactId>clickhouse-jdbc</artifactId>
-			<version>0.3.2</version>
+			<version>0.4.1</version>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>gson</artifactId>
-					<groupId>com.google.code.gson</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
