request body json 使用注解获取指定name的值

--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -33,6 +33,7 @@
 		<emoji-java.version>5.1.1</emoji-java.version>
 		<servlet-api.version>4.0.1</servlet-api.version>
 		<spring-boot.version>2.7.10</spring-boot.version>
+		<spring-mvc.version>5.3.26</spring-mvc.version>
 		<cglib.version>3.3.0</cglib.version>
 	</properties>
 
@@ -319,6 +320,26 @@
 					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring-mvc.version}</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring-boot.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
