--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -59,6 +59,18 @@
 			<version>2.0.25</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-gson</artifactId>
+			<version>0.11.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
