修复JWTSignerUtil中ES256签名不符合规范问题

--- a/hutool-jwt/pom.xml
+++ b/hutool-jwt/pom.xml
@@ -41,5 +41,17 @@
 			<version>${bouncycastle.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-gson</artifactId>
+			<version>0.11.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
