--- a/hutool-extra/pom.xml
+++ b/hutool-extra/pom.xml
@@ -32,18 +32,19 @@
 		<Automatic-Module-Name>org.dromara.hutool.extra</Automatic-Module-Name>
 		<!-- versions -->
 		<velocity.version>2.3</velocity.version>
-		<beetl.version>3.15.6.RELEASE</beetl.version>
+		<beetl.version>3.15.7.RELEASE</beetl.version>
 		<rythm.version>1.4.2</rythm.version>
 		<freemarker.version>2.3.32</freemarker.version>
+		<!-- 固定4.x -->
 		<enjoy.version>4.9.21</enjoy.version>
-		<thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
+		<thymeleaf.version>3.1.1.RELEASE</thymeleaf.version>
 		<mail.version>1.6.2</mail.version>
 		<jsch.version>0.1.55</jsch.version>
 		<sshj.version>0.35.0</sshj.version>
 		<zxing.version>3.5.1</zxing.version>
 		<net.version>3.9.0</net.version>
 		<emoji-java.version>5.1.1</emoji-java.version>
-		<spring-boot.version>2.7.13</spring-boot.version>
+		<spring-boot.version>2.7.14</spring-boot.version>
 	</properties>
 
 	<dependencies>
@@ -155,7 +156,7 @@
 		<dependency>
 			<groupId>io.pebbletemplates</groupId>
 			<artifactId>pebble</artifactId>
-			<version>3.2.0</version>
+			<version>3.2.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-api</artifactId>
@@ -169,14 +170,14 @@
 		<dependency>
 			<groupId>jakarta.mail</groupId>
 			<artifactId>jakarta.mail-api</artifactId>
-			<version>2.1.1</version>
+			<version>2.1.2</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.angus</groupId>
 			<artifactId>jakarta.mail</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -306,7 +307,7 @@
 		<dependency>
 			<groupId>com.hankcs</groupId>
 			<artifactId>hanlp</artifactId>
-			<version>portable-1.8.3</version>
+			<version>portable-1.8.4</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -397,7 +398,7 @@
 		<dependency>
 			<groupId>com.github.houbb</groupId>
 			<artifactId>pinyin</artifactId>
-			<version>0.3.1</version>
+			<version>0.4.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>apiguardian-api</artifactId>
@@ -409,7 +410,7 @@
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy</artifactId>
-			<version>1.14.4</version>
+			<version>1.14.5</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -424,7 +425,8 @@
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>7.0.4.Final</version>
+			<!-- 固定7.x，支持jdk8 -->
+			<version>7.0.5.Final</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -463,7 +465,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.11</version>
+			<version>1.3.7</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -475,7 +477,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.22</version>
+			<version>1.23.0</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -483,7 +485,7 @@
 		<dependency>
 			<groupId>com.github.oshi</groupId>
 			<artifactId>oshi-core</artifactId>
-			<version>6.3.2</version>
+			<version>6.4.4</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
