--- a/hutool-json/pom.xml
+++ b/hutool-json/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>cn.hutool</groupId>
 		<artifactId>hutool-parent</artifactId>
-		<version>5.8.22</version>
+		<version>5.8.23-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>hutool-json</artifactId>
