--- a/hutool-poi/pom.xml
+++ b/hutool-poi/pom.xml
@@ -55,6 +55,16 @@
 			<artifactId>ofdrw-full</artifactId>
 			<version>2.2.4</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>bcpkix-jdk15on</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>bcprov-jdk15on</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
+			</exclusions>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
