--- a/hutool-http/pom.xml
+++ b/hutool-http/pom.xml
@@ -50,6 +50,12 @@
 			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>2.0.1</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Servlet -->
 		<dependency>
