--- a/hutool-db/pom.xml
+++ b/hutool-db/pom.xml
@@ -142,6 +142,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.dameng</groupId>
+			<artifactId>DmJdbcDriver18</artifactId>
+			<version>8.1.3.62</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>2.0.9</version>
